--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -5,100 +5,100 @@
 		<div class="container page-name">
 			<h1 class="text-center">Liste des offres d'emploi disponibles</h1>
 			<p class="lead text-center">Utilisez le champ de recherche suivant pour trouver les offres qui vous conviennent le mieux</p>
-		<div class="container">
-			<form action="#">
-				<div class="row">
-					<div class="form-group col-xs-12 col-sm-4">
-						<input type="text" name="keyword" class="form-control" placeholder="Mots clés:" value={{ parameters.keyword }}>
-					</div>
-					<div class="form-group col-xs-12 col-sm-4">
-						<select name="location" class="form-control selectpicker">
-							<option selected>Toutes les communes</option>
-							{% for city in cities %}
-								{% if parameters.location == city.name %}
-									<option selected>{{ city.name }}</option>
-								{% else %}
-									<option>{{ city.name }}</option>
-								{% endif %}
-							{% endfor %}
-						</select>
-					</div>
-					<div class="form-group col-xs-12 col-sm-4">
-						<select name="section" class="form-control selectpicker">
-							<option selected>Toutes les sections</option>
-							{% for section in sections %}
-								{% if parameters.section == section.name %}
-									<option selected>{{ section.name }}</option>
-								{% else %}
-									<option>{{ section.name }}</option>
-								{% endif %}
-							{% endfor %}
-						</select>
-					</div>
-				</div>
-				<div class="button-group">
-					<div class="action-buttons">
-						<button class="btn btn-primary">Filtrer</button>
-					</div>
-				</div>
-			</form>
-		</div>
-	</header>
-	<main>
-		<section class="no-padding-top bg-alt">
 			<div class="container">
-				<div class="row">
-					<div class="col-xs-12 text-right">
-						<h5>{{offers|length}}
-							offres trouvées.</h5>
-						{% if is_granted('ROLE_BUSINESS') %}
-							<a href="{{ path('offer_new') }}" class="btn btn-primary btn-sm">Déposer une offre</a>
-						{% endif %}
-					</div>
-					{# Job detail #}
-					{% for offer in offers %}
-						<div class="col-xs-12">
-							<div class="item-block">
-								<header>
-									{% if offer.business.image %}
-										<a href="{{ path('business_show', {'id': offer.business.id}) }}"><img src="{{ asset('uploads/images/' ~ offer.business.image) }}" alt=""></a>
-									{% else %}
-										<img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
-									{% endif %}
-									<div class="hgroup">
-										<h4>
-											<a href="{{ path('offer_show', {'id': offer.id}) }}">{{ offer.title }}</a>
-										</h4>
-										<h5>
-											<a href="{{ path('business_show', {'id': offer.business.id}) }}">{{ offer.business.name }}</a>
-										</h5>
-									</div>
-									<div class="header-meta">
-										<span class="location">{{ offer.location }}</span>
-										{% if offer.publishDate %}
-											<time>Publié le
-												{{ offer.publishDate|date("d/m/Y") }}</time>
-										{% else %}
-											attente BDD
-										{% endif %}
-									</div>
-								</header>
-								{% if (app.user.business.id == offer.business.id or is_granted('ROLE_ADMIN')) %}
-									<footer>
-										<div class="action-btn">
-											<a class="btn btn-xs btn-gray" href="{{ path('offer_edit', {'id': offer.id}) }}">Modifier</a>
-											<div class="delete-btn">{{ include('offers/_delete_form.html.twig') }}</div>
-										</div>
-									</footer>
-								{% endif %}
-							</div>
+				<form action="#">
+					<div class="row">
+						<div class="form-group col-xs-12 col-sm-4">
+							<input type="text" name="keyword" class="form-control" placeholder="Mots clés:" value={{ parameters.keyword }}>
 						</div>
-					{% else %}
-						Il n'y a aucune offre d'emploi disponible.
-					{% endfor %}
-					{# End job detail #}
-				</div>
+						<div class="form-group col-xs-12 col-sm-4">
+							<select name="location" class="form-control selectpicker">
+								<option selected>Toutes les communes</option>
+								{% for city in cities %}
+									{% if parameters.location == city.name %}
+										<option selected>{{ city.name }}</option>
+									{% else %}
+										<option>{{ city.name }}</option>
+									{% endif %}
+								{% endfor %}
+							</select>
+						</div>
+						<div class="form-group col-xs-12 col-sm-4">
+							<select name="section" class="form-control selectpicker">
+								<option selected>Toutes les sections</option>
+								{% for section in sections %}
+									{% if parameters.section == section.name %}
+										<option selected>{{ section.name }}</option>
+									{% else %}
+										<option>{{ section.name }}</option>
+									{% endif %}
+								{% endfor %}
+							</select>
+						</div>
+					</div>
+					<div class="button-group">
+						<div class="action-buttons">
+							<button class="btn btn-primary">Filtrer</button>
+						</div>
+					</div>
+				</form>
 			</div>
-		</section>
-	</main>
-{% endblock %}
+		</header>
+		<main>
+			<section class="no-padding-top bg-alt">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 text-right">
+							<h5>{{offers|length}}
+								offres trouvées.</h5>
+							{% if is_granted('ROLE_BUSINESS') %}
+								<a href="{{ path('offer_new') }}" class="btn btn-primary btn-sm">Déposer une offre</a>
+							{% endif %}
+						</div>
+						{# Job detail #}
+						{% for offer in offers %}
+							<div class="col-xs-12">
+								<div class="item-block">
+									<header>
+										{% if offer.business.image %}
+											<a href="{{ path('business_show', {'id': offer.business.id}) }}"><img src="{{ asset('uploads/images/' ~ offer.business.image) }}" alt=""></a>
+										{% else %}
+											<img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
+										{% endif %}
+										<div class="hgroup">
+											<h4>
+												<a href="{{ path('offer_show', {'id': offer.id}) }}">{{ offer.title }}</a>
+											</h4>
+											<h5>
+												<a href="{{ path('business_show', {'id': offer.business.id}) }}">{{ offer.business.name }}</a>
+											</h5>
+										</div>
+										<div class="header-meta">
+											<span class="location">{{ offer.location }}</span>
+											{% if offer.publishDate %}
+												<time>Publié le
+													{{ offer.publishDate|date("d/m/Y") }}</time>
+											{% else %}
+												attente BDD
+											{% endif %}
+										</div>
+									</header>
+									{% if (app.user.id == offer.business.user.id or is_granted('ROLE_ADMIN')) %}
+										<footer>
+											<div class="action-btn">
+												<a class="btn btn-xs btn-gray" href="{{ path('offer_edit', {'id': offer.id}) }}">Modifier</a>
+												<div class="delete-btn">{{ include('offers/_delete_form.html.twig') }}</div>
+											</div>
+										</footer>
+									{% endif %}
+								</div>
+							</div>
+						{% else %}
+							Il n'y a aucune offre d'emploi disponible.
+						{% endfor %}
+						{# End job detail #}
+					</div>
+				</div>
+			</section>
+		</main>
+	{% endblock %}
