--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -1,73 +1,76 @@
-      <div class="container">
+<div
+	class="container">
 
-        <!-- Logo -->
-        <div class="pull-left">
-          <a class="navbar-toggle" href="#" data-toggle="offcanvas"><i class="ti-menu"></i></a>
+	<!-- Logo -->
+	<div class="pull-left">
+		<a class="navbar-toggle" href="#" data-toggle="offcanvas">
+			<i class="ti-menu"></i>
+		</a>
 
-          <div class="logo-wrapper">
-            <a class="logo" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo.png') }} #}" alt="logo"></a>
-            <a class="logo-alt" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo-alt.png') }} #}" alt="logo-alt"></a>
-          </div>
+		<div class="logo-wrapper">
+			<a class="logo" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo.png') }} #}" alt="logo"></a>
+			<a class="logo-alt" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo-alt.png') }} #}" alt="logo-alt"></a>
+		</div>
 
-        </div>
-        <!-- END Logo -->
+	</div>
+	<!-- END Logo -->
 
-        <!-- User account -->
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <div class="pull-right user-login">
-          <a class="btn btn-sm btn-primary" href="{{ path("app_logout") }}">se déconnecter</a>
-        </div>
-        {% else %}
-        <div class="pull-right user-login">
-          <a class="btn btn-sm btn-primary" href="{{ path("app_login") }}">Se connecter</a>
-        </div>
-        {% endif %}
-        <!-- END User account -->
-        {% if is_granted('ROLE_STUDENT') %}
-        <!-- Navigation menu -->
-        <ul class="nav-menu">
-          <li>
-            <a href="{{ path("business_list") }}">Les Entreprises</a>
-          </li>
-          <li>
-            <a href="{{ path("offer_list") }}">Offres d'emploi</a>
-          </li>
-          <li>
-            <a href="{{ path("student_profile") }}">Mon profil</a>
-          </li>
-        </ul>
-        <!-- END Navigation menu -->
-        {% endif %}
-        {% if is_granted('ROLE_BUSINESS') %}
-        <!-- Navigation menu -->
-        <ul class="nav-menu">
-          <li>
-            <a href="{{ path("student_list") }}">Les Apprenants</a>
-          </li>
-          <li>
-            {# <a href="{{ path('business_show', {'id': app.user.business.id}) }}">Mes offres d'emploi</a> #}
-          </li>
-          <li>
-            <a href="{{ path("business_profile") }}">Mon Entreprise</a>
-          </li>
-        </ul>
-        <!-- END Navigation menu -->
-        {% endif %}
-
-        {% if is_granted('ROLE_ADMIN') %}
-        <!-- Navigation menu -->
-        <ul class="nav-menu">
-          <li>
-            <a href="{{ path("student_list") }}">Les Apprenants</a>
-          </li>
-          <li>
-            <a href="{{ path("business_list") }}">Les Entreprises</a>
-          </li>
-          <li>
-            <a href="{{ path("offer_list") }}">Offres d'emploi</a>
-          </li>
-        </ul>
-        <!-- END Navigation menu -->
-        {% endif %}
-
-      </div>
+	<!-- User account -->
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+		<div class="pull-right user-login">
+			<a class="btn btn-sm btn-primary" href="{{ path("app_logout") }}">Déconnexion</a>
+		</div>
+	{% else %}
+		<div class="pull-right user-login">
+			<a class="btn btn-sm btn-primary" href="{{ path("app_login") }}">Connexion</a>
+		</div>
+	{% endif %}
+	<!-- END User account -->
+	<!-- Navigation menu -->
+	{% if is_granted('ROLE_STUDENT') %}
+		<ul class="nav-menu">
+			<li>
+				<a href="{{ path("business_list") }}">Les Entreprises</a>
+			</li>
+			<li>
+				<a href="{{ path("offer_list") }}">Offres d'emploi</a>
+			</li>
+			<li>
+				<a href="{{ path("student_profile") }}">Mon profil</a>
+			</li>
+		</ul>
+	{% endif %}
+	{% if is_granted('ROLE_BUSINESS') %}
+		<ul class="nav-menu">
+			<li>
+				<a href="{{ path("student_list") }}">Les Apprenants</a>
+			</li>
+			<li>
+				<a href="{{ path('business_show', {'id': app.user.business.id}) }}">Mes offres d'emploi</a>
+			</li>
+			<li>
+				<a href="{{ path("business_profile") }}">Mon Entreprise</a>
+			</li>
+		</ul>
+	{% endif %}
+	{% if is_granted('ROLE_ADMIN') %}
+		<ul class="nav-menu">
+			<li>
+				<a href="{{ path("student_list") }}">Les Apprenants</a>
+			</li>
+			<li>
+				<a href="{{ path("business_list") }}">Les Entreprises</a>
+			</li>
+			<li>
+				<a href="{{ path("offer_list") }}">Offres d'emploi</a>
+			</li>
+			<li>
+				<a href="{{ path("student_new") }}">Inscrire un alternant</a>
+			</li>
+			<li>
+				<a href="{{ path("business_new") }}">Inscrire une entreprise</a>
+			</li>
+		</ul>
+	{% endif %}
+	<!-- END Navigation menu -->
+</div>
