--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -10,5 +10,6 @@
 
 {% block javascripts %}
   <script src="{{ asset('assets/js/educations.js') }}"></script>
+  <script src="{{ asset('assets/js/experiences.js') }}"></script>
   <script src="{{ asset('assets/js/skills.js') }}"></script>
 {% endblock %}
