--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -1,50 +1,61 @@
 {% form_theme form 'form/form_errors.html.twig' %}
 
 {% macro printEducationRow(education) %}
-      <div class="col-xs-12">
-        <div class="item-block">
-          <div class="item-form">
+  <div class="col-xs-12">
+    <div class="item-block">
+      <div class="item-form">
 
-            <button class="btn btn-danger btn-float btn-remove">
-              <i class="ti-close"></i>
-            </button>
+        <button class="btn btn-danger btn-float btn-remove">
+          <i class="ti-close"></i>
+        </button>
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="form-group">
+              {{form_widget(education.image)}}
+              <span class="help-block">Définir une image de profil</span>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-8">
+            <div class="form-group">
+              {{form_widget(education.degree)}}
+            </div>
+
+            <div class="form-group">
+              {{form_widget(education.speciality)}}
+            </div>
+
+            <div class="form-group">
+              {{form_widget(education.schoolName)}}
+            </div>
 
             <div class="row">
-              <div class="col-xs-12 col-sm-4">
-                <div class="form-group">
-                  {{form_widget(education.image)}}
-                  <span class="help-block">Définir une image de profil</span>
-                </div>
-              </div>
-
-              <div class="col-xs-12 col-sm-8">
-                <div class="form-group">
-                  {{form_widget(education.degree)}}
-                </div>
-
-                <div class="form-group">
-                  {{form_widget(education.speciality)}}
-                </div>
-
-                <div class="form-group">
-                  {{form_widget(education.schoolName)}}
-                </div>
-
+              <div class="col-xs-12 col-md-6 mb-md-3">
                 <div class="form-group">
                   <div class="input-group">
                     <span class="input-group-addon">Date de début</span>
                     {{form_widget(education.dateFrom)}}
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                  <div class="input-group">
                     <span class="input-group-addon">Date de fin</span>
                     {{form_widget(education.dateTo)}}
                   </div>
                 </div>
-
               </div>
-                
-            </div>
+            </div>     
+
           </div>
+            
         </div>
       </div>
+    </div>
+  </div>
 {% endmacro %}
 
 {% macro printExperienceRow(experience) %}
@@ -77,7 +88,7 @@
               <div class="col-xs-12 col-md-6 mb-md-3">
                 <div class="form-group">
                   <div class="input-group">
-                    <span class="input-group-addon">Date début</span>
+                    <span class="input-group-addon">Date de début</span>
                     {{form_widget(experience.dateFrom)}}
                   </div>
                 </div>
@@ -201,7 +212,7 @@
 
         <hr class="hr-lg">
 
-        <h6>Basic information</h6>
+        <h6>Informations basiques</h6>
         <div class="row">
 
           <div class="form-group col-xs-12 col-sm-6">
@@ -235,7 +246,7 @@
                 {{form_widget(form.age)}}
               {% endif %}
               {{ form_errors(form.age) }}
-              <span class="input-group-addon">Years old</span>
+              <span class="input-group-addon">ans</span>
             </div>
           </div>
           <div class="form-group col-xs-8 col-sm-6">
@@ -257,13 +268,13 @@
       </div>
     </div>
     <div class="button-group">
-          <div class="action-buttons">
-            <div class="upload-button">
-              <button class="btn btn-block btn-primary">Choose a cover image</button>
-              {{form_widget(form.coverImage)}}
-            </div>
-          </div>
+      <div class="action-buttons">
+        <div class="upload-button">
+          <button class="btn btn-block btn-primary"><i class="fa fa-plus-square"></i> Image de couverture</button>
+          {{form_widget(form.coverImage)}}
         </div>
+      </div>
+    </div>
   </div>
 </header>
 <main>
@@ -273,12 +284,12 @@
     <div class="container">
 
       <header class="section-header">
-        <span>Restez connectés</span>
-        <h2>Médias sociaux</h2>
+        <span>Restez connecté !</span>
+        <h2>Résaux sociaux</h2>
       </header>
 
       <div class="row">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon">
@@ -296,8 +307,6 @@
               {{form_widget(form.twitter)}}
             </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-6">
 
           <div class="form-group">
             <div class="input-group">
@@ -371,7 +380,7 @@
   <section class=" bg-alt">
     <div class="container">
       <header class="section-header">
-        <span>Expertise Area</span>
+        <span>Zone de compétence</span>
         <h2>Mes qualifications</h2>
       </header>
 
@@ -385,7 +394,7 @@
 
           <div class="col-xs-12 text-center btn-add-skill">
             <br>
-            <button class="btn btn-primary btn-add-skill">Ajouter qualification</button>
+            <button class="btn btn-primary btn-add-skill">Ajouter une qualification</button>
           </div>
         </div>
       </div>
@@ -405,7 +414,6 @@
       <p class="text-center">
         {{ form_widget(form.submit, { 'label': 'Valider' }) }}
       </p>
-      <a href="{{ path('student_index') }}" class="btn btn-primary"> <<< backtolist </a>
 	  </div>
 	</section>
   <!--ENDSubmit-->
