add select form (location) profile business and fix bug (#165)
* fix(product) : #156 profile student button

* update(product) : #156 update

* feat(product) :  #119 add select location and fix bug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,9 @@
         background-color: #4F805D;
     }
 }
-
+.custom-picker-location > div {
+    max-height: 300px !important;
+}
 .page-header:before {
     position: absolute;
     content: "";
