--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,7 +39,7 @@
           <div class="form-group">
             <div class="input-group">
               <span class="input-group-addon"><i class="ti-user"></i></span>
-              <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Nom d'utilisateur" required autofocus>
+              <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Numéro de téléphone ou email" required autofocus>
             </div>
           </div>
           
