--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -205,7 +205,7 @@
 									</header>
 
 									<div class="item-body">
-										<p>{{student.mindescription}}</p>
+										<p>{{student.description}}</p>
 
 										<div class="tag-list">
 											<span>HTML5</span>
