--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -15,7 +15,7 @@
 						<h3>{{student.section.name}}</h3>
 					</div>
 					<hr>
-					<p class="lead">{{student.mindescription}}</p>
+					<p class="lead">{{student.description}}</p>
 					<ul class="details cols-2">
 						<li>
 							<i class="fa fa-map-marker"></i>
