--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -9,7 +9,7 @@
 				<form action="#">
 					<div class="row">
 						<div class="form-group col-xs-12 col-sm-4">
-							<input type="text" name="keyword" class="form-control" placeholder="Mots clés:" value={{ parameters.keyword }}>
+							<input type="text" name="keyword" class="form-control" placeholder="Poste recherché" value={{ parameters.keyword }}>
 						</div>
 						<div class="form-group col-xs-12 col-sm-4">
 							<select name="location" class="form-control selectpicker">
