--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -20,7 +20,7 @@
 
 					<div class="row">
 						<div class="form-group col-xs-12 col-sm-4">
-							<input type="text" class="form-control" placeholder="Mots clés" name="keyword" value={{ parameters.keyword }}>
+							<input type="text" class="form-control" placeholder="Nom de l'apprenant" name="keyword" value={{ parameters.keyword }}>
 						</div>
 
 						<div class="form-group col-xs-12 col-sm-4">
