--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -8,8 +8,8 @@
 	<header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg);">
 		<div class="container page-name">
 			{% if app.user %}
-				<h1 class="text-center">Liste des alternants :</h1>
-				<p class="lead text-center">Filtrer la recherche :</p>
+				<h1 class="text-center">Liste des alternants</h1>
+				<p class="lead text-center">Filtrer votre recherche :</p>
 			{% else %}
 				<h1 class="lead text-center">Veuillez vous connecter pour accéder à cette liste.</h1>
 			{% endif %}
