fix(product): #192 update titles

--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -9,7 +9,7 @@
 		<div class="container page-name">
 			{% if app.user %}
 				<h1 class="text-center">Liste des alternants</h1>
-				<p class="lead text-center">Filtrer votre recherche :</p>
+				<p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
 			{% else %}
 				<h1 class="lead text-center">Veuillez vous connecter pour accéder à cette liste.</h1>
 			{% endif %}
