--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -4,8 +4,8 @@
     <!-- Page header -->
     <header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg);">
       <div class="container page-name">
-        <h1 class="text-center">Parcourir les entreprises</h1>
-        <p class="lead text-center">Utilisez le champ de recherche suivant pour trouver les entreprises qui vous conviennent le mieux</p>
+        <h1 class="text-center">Liste des entreprises</h1>
+        <p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
       </div>
 
       <div class="container">
@@ -13,7 +13,7 @@
 
           <div class="row">
             <div class="form-group col-xs-12 col-sm-8">
-              <input type="text" name="keyword" class="form-control" placeholder="Mot clé" value={{ parameters.keyword }}>
+              <input type="text" name="keyword" class="form-control" placeholder="Nom de l'entreprise" value={{ parameters.keyword }}>
             </div>
 
             <div class="form-group col-xs-12 col-sm-4">
@@ -33,7 +33,7 @@
 
           <div class="button-group">
             <div class="action-buttons">
-              <button class="btn btn-primary">Appliquer le filtre</button>
+              <button class="btn btn-primary">Filtrer</button>
             </div>
           </div>
 
