--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -4,7 +4,7 @@
 	<header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container page-name">
 			<h1 class="text-center">Liste des offres d'emploi disponibles</h1>
-			<p class="lead text-center">Utilisez le champ de recherche suivant pour trouver les offres qui vous conviennent le mieux</p>
+			<p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
 			<div class="container">
 				<form action="#">
 					<div class="row">
