--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -81,24 +81,10 @@
 
             <!-- Page navigation -->
             <nav class="text-center">
-              <ul class="pagination">
-                <li>
-                  <a href="#" aria-label="Previous">
-                    <i class="ti-angle-left"></i>
-                  </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li class="active"><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li>
-                  <a href="#" aria-label="Next">
-                    <i class="ti-angle-right"></i>
-                  </a>
-                </li>
-              </ul>
+              {{ knp_pagination_render(businesses) }}
             </nav>
             <!-- END Page navigation -->
+            
           </div>
         </div>
       </section>
