--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -29,7 +29,7 @@
 					<div
 						class="row item-blocks-connected">
 						<!-- Job item -->
-						{% for offer in offers %}
+						{% for offer in offers|slice(0, 5) %}
 							<div class="col-xs-12">
 								<div class="item-block">
 									<header>
