--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -403,7 +403,7 @@
   <!-- END Skills -->
   {% endif %}
   <!-- Submit -->
-  <section class=" bg-img" style="background-image: url(assets/img/bg-facts.jpg);">
+  <section class="bg-img submit sticky" style="background-image: url({{ asset('assets/img/bg-facts.jpg') }});">
     <div class="container">
       <header class="section-header">
         <span>Vous avez terminé?</span>
