--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -12,4 +12,5 @@
   <script src="{{ asset('assets/js/educations.js') }}"></script>
   <script src="{{ asset('assets/js/experiences.js') }}"></script>
   <script src="{{ asset('assets/js/skills.js') }}"></script>
+  <script src="{{ asset('assets/js/sticky.js') }}"></script>
 {% endblock %}
