fix(engineering) fix resuslts count pagination

--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -54,7 +54,7 @@
             <div class="col-xs-12">
               <br>
               <h5>
-								<strong>{{businesses|length}}</strong>
+								<strong>{{businesses.getTotalItemCount}}</strong>
 								résultats trouvés.
 							</h5>
             </div>
