fix(product) : #192 update titles

--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -109,8 +109,8 @@
 		<section id="open-positions" class="bg-alt">
 			<div class="container">
 				<header class="section-header">
-					<span>Postes vacants</span>
-					<h2>Postes ouverts</h2>
+					<span>Offres de l'entreprise</span>
+					<h2>Offres ajoutées par l'entreprise</h2>
 				</header>
 
 				<div
