--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -270,7 +270,7 @@
     <div class="button-group">
       <div class="action-buttons">
         <div class="upload-button">
-          <button class="btn btn-block btn-primary"><i class="fa fa-plus-square"></i> Image de couverture</button>
+          <button class="btn btn-block btn-primary"></i>Choisir une image de couverture</button>
           {{form_widget(form.coverImage)}}
         </div>
       </div>
