fix(product) : #192 update titles (#210)

--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -7,8 +7,8 @@
   <!-- Page header -->
   <header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }});">
     <div class="container page-name">
-      <h1 class="text-center">Ajouter votre entreprise</h1>
-      <p class="lead text-center">Créez un profil pour votre entreprise et mettez-le en ligne.</p>
+      <h1 class="text-center">Ajouter une entreprise</h1>
+      <p class="lead text-center">Formulaire de création d'un profil entreprise</p>
     </div>
     <div class="container">
       <div class="row">
@@ -18,7 +18,7 @@
               <div class="form-group">
                 {{ form_widget(form.image, {'attr': {'class': 'dropify'}}) }}
                 {# <input type="file" class="dropify" data-default-file="assets/img/logo-default.png"> #}
-                <span class="help-block">A square logo</span>
+                <span class="help-block">Logo de l'entreprise</span>
               </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-lg-10">
